--- a/templates/enhanced_index.html
+++ b/templates/enhanced_index.html
@@ -24,7 +24,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#"><i class="fas fa-car"></i> CarPredict Pro</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-car"></i> CarCrafter AI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
