--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head xmlns="http://www.w3.org/1999/xhtml">
     <meta charset="UTF-8">
-    <title>Car Price Predictor</title>
+    <title>CarCrafter AI</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="card mt-50" style="width: 100%; height: 100%">
             <div class="card-header" style="text-align: center">
-                <h1>Welcome to Car Price Predictor</h1>
+                <h1>Welcome to CarCrafter AI</h1>
             </div>
             <div class="card-body">
                 <div class="col-12" style="text-align: center">
